--- a/GymDesktop.csproj
+++ b/GymDesktop.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="Form1.Designer.cs">
+    <Compile Update="Login.Designer.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
     <Compile Update="Properties\Resources.Designer.cs">
